[package]
name = "sample_btc"
version = "0.1.0"
authors = ["flmdaybreak <546396516@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = "~2.33"
merkle-cbt = "0.2.2"
env_logger = "0.7.1"
serde = {version ="1.0", features =["derive"]}
rust-crypto = "^0.2"
bincode = "1.3"
sha2 = "0.9"
failure = "0.1"

sled ="0.34"
rand = "0.4.6"

bitcoincash-addr = "0.5.2"


